unpackaged/main/default/objects/Quote/fields/Account_Copy__c.field-meta.xml
<CustomField>
    <fullName>Account_Copy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Copy</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>