unpackaged/main/default/objects/Quote/fields/Account_Net_Terms__c.field-meta.xml
<CustomField>
    <fullName>Account_Net_Terms__c</fullName>
    <formula>Text(Opportunity.Account.varcpq__NET_TERMS__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Net Terms</label>
    <type>Text</type>
</CustomField>