unpackaged/main/default/objects/Quote/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <formula>Opportunity.Account.Owner.FirstName  &amp; &quot; &quot; &amp;   Opportunity.Account.Owner.LastName</formula>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>