unpackaged/main/default/objects/Quote/fields/Additional_Ship_To_Header__c.field-meta.xml
<CustomField>
    <fullName>Additional_Ship_To_Header__c</fullName>
    <label>Additional Ship To Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>