unpackaged/main/default/objects/Quote/fields/Attention_To_Over__c.field-meta.xml
<CustomField>
    <fullName>Attention_To_Over__c</fullName>
    <label>Attention To Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>