unpackaged/main/default/objects/Quote/fields/Avalara_Response__c.field-meta.xml
<CustomField>
    <fullName>Avalara_Response__c</fullName>
    <label>Avalara Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>