unpackaged/main/default/objects/Quote/fields/Bill_Customer_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>Bill_Customer_Address_Id__c</fullName>
    <label>Bill Customer Address Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>