unpackaged/main/default/objects/Quote/fields/Bill_Only_Order__c.field-meta.xml
<CustomField>
    <fullName>Bill_Only_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Only Order</label>
    <type>Checkbox</type>
</CustomField>