unpackaged/main/default/objects/Quote/fields/Bill_To_Company__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Company__c</fullName>
    <label>Bill To Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>