unpackaged/main/default/objects/Quote/fields/Bill_to_email__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_email__c</fullName>
    <label>Bill to Email</label>
    <type>Email</type>
</CustomField>