unpackaged/main/default/objects/Quote/fields/Bill_to_phone__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_phone__c</fullName>
    <label>Bill to Phone</label>
    <type>Phone</type>
</CustomField>