unpackaged/main/default/objects/Quote/fields/BillingAdditionalStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingAdditionalStreet__c</fullName>
    <label>BillingAddtionalStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>