unpackaged/main/default/objects/Quote/fields/Calculate_Tax_UI__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Tax_UI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created this filed for UI only to avoid unnecessary AvaTax toast message</description>
    <inlineHelpText>Triggers AvaTax to show the calculated tax</inlineHelpText>
    <label>Calculate Tax</label>
    <type>Checkbox</type>
</CustomField>