unpackaged/main/default/objects/Quote/fields/Cost_Centre_Reference__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre_Reference__c</fullName>
    <label>Cost Centre Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>