unpackaged/main/default/objects/Quote/fields/CreatedDateFormula__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateFormula__c</fullName>
    <description>CreatedDate for user view</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedDate</label>
    <type>DateTime</type>
</CustomField>