unpackaged/main/default/objects/Quote/fields/Default_PO_File__c.field-meta.xml
<CustomField>
    <fullName>Default_PO_File__c</fullName>
    <label>Default PO File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>