unpackaged/main/default/objects/Quote/fields/isAppleDealNotRegistered__c.field-meta.xml
<CustomField>
    <fullName>isAppleDealNotRegistered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Apple Deal Not Registered?</label>
    <type>Checkbox</type>
</CustomField>