unpackaged/main/default/objects/Quote/fields/Last_Modified_Date_Display__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_Display__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified Date Display</label>
    <type>DateTime</type>
</CustomField>