unpackaged/main/default/objects/Quote/fields/Latest_QLI_Edit__c.field-meta.xml
<CustomField>
    <fullName>Latest_QLI_Edit__c</fullName>
    <label>Latest QLI Edit</label>
    <type>DateTime</type>
</CustomField>