unpackaged/main/default/objects/Quote/fields/Line_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Line_End_Date__c</fullName>
    <inlineHelpText>The End Date of Quote line items</inlineHelpText>
    <label>Line End Date</label>
    <summarizedField>QuoteLineItem.Term_End_Date__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>