unpackaged/main/default/objects/Quote/fields/Line_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Line_Start_Date__c</fullName>
    <inlineHelpText>If Quote line item has Start Date</inlineHelpText>
    <label>Line Start Date</label>
    <summarizedField>QuoteLineItem.Term_Start_Date__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>