unpackaged/main/default/objects/Quote/fields/Order_Term__c.field-meta.xml
<CustomField>
    <fullName>Order_Term__c</fullName>
    <inlineHelpText>The purpose of this field is to track if this Order is a Term/Subscription Type Order and what the Renewal Frequency is when that is the case.</inlineHelpText>
    <label>Order Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Term</fullName>
                <default>true</default>
                <label>No Term</label>
            </value>
            <value>
                <fullName>2 Year</fullName>
            </value>
            <value>
                <fullName>3 Year</fullName>
            </value>
            <value>
                <fullName>4 Year</fullName>
            </value>
            <value>
                <fullName>5 Year</fullName>
            </value>
            <value>
                <fullName>Billed Monthly Paid Monthly</fullName>
            </value>
            <value>
                <fullName>Billed Annually Paid Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>