unpackaged/main/default/objects/Quote/fields/QLI_from_different_country__c.field-meta.xml
<CustomField>
    <fullName>QLI_from_different_country__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distributor Mismatch</label>
    <type>Checkbox</type>
</CustomField>