unpackaged/main/default/objects/Quote/fields/Quote_Credit_level_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>Quote_Credit_level_Exceeded__c</fullName>
    <description>Check if quote exceeds the customer&#39;s credit limit</description>
    <formula>Opportunity.Account.Credit_Limit__c &lt;= ((Opportunity.Account.Total_SO_Grand_Total_Non_CC__c - Opportunity.Account.Total_SO_Paid_Amount_Non_CC__c) + (TotalPrice + ShippingHandling + Tax))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Credit level Exceeded ?</label>
    <type>Checkbox</type>
</CustomField>