unpackaged/main/default/objects/Quote/fields/Quote_Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item_Count__c</fullName>
    <label>Quote Line Item Count</label>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>