unpackaged/main/default/objects/Quote/fields/Quote_Net_Terms__c.field-meta.xml
<CustomField>
    <fullName>Quote_Net_Terms__c</fullName>
    <label>Quote Net Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Terms</fullName>
                <default>true</default>
                <label>No Terms</label>
            </value>
            <value>
                <fullName>Pay on Pay</fullName>
            </value>
            <value>
                <fullName>NET10</fullName>
            </value>
            <value>
                <fullName>NET15</fullName>
            </value>
            <value>
                <fullName>NET20</fullName>
            </value>
            <value>
                <fullName>NET30</fullName>
            </value>
            <value>
                <fullName>NET40</fullName>
            </value>
            <value>
                <fullName>NET45</fullName>
            </value>
            <value>
                <fullName>NET50</fullName>
            </value>
            <value>
                <fullName>NET60</fullName>
            </value>
            <value>
                <fullName>NET75</fullName>
            </value>
            <value>
                <fullName>NET90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>