unpackaged/main/default/objects/Quote/fields/Quote_PDF_Count__c.field-meta.xml
<CustomField>
    <fullName>Quote_PDF_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quote PDF Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>