unpackaged/main/default/objects/Quote/fields/Required_Fields_Filled__c.field-meta.xml
<CustomField>
    <fullName>Required_Fields_Filled__c</fullName>
    <formula>AND(
NOT(ISBLANK(ShippingName)) ,
NOT(ISBLANK(ShippingStreet )) ,
NOT(ISBLANK(ShippingCity )) ,
NOT(ISBLANK(ShippingState )) ,
NOT(ISBLANK( ShippingPostalCode )) ,
NOT(ISBLANK( BillingName)) ,
NOT(ISBLANK(BillingStreet )) ,
NOT(ISBLANK(BillingCity )) ,
NOT(ISBLANK(BillingState )) ,
NOT(ISBLANK(BillingPostalCode ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Fields Filled</label>
    <type>Checkbox</type>
</CustomField>