unpackaged/main/default/objects/Quote/fields/Retained_Charge_Count__c.field-meta.xml
<CustomField>
    <fullName>Retained_Charge_Count__c</fullName>
    <label>Retained Charge Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>