unpackaged/main/default/objects/Quote/fields/Retained_Transfers__c.field-meta.xml
<CustomField>
    <fullName>Retained_Transfers__c</fullName>
    <label>Retained Transfers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>