unpackaged/main/default/objects/Quote/fields/Sales_Order_Default_Files__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Default_Files__c</fullName>
    <label>Sales Order Default Files</label>
    <type>TextArea</type>
</CustomField>