unpackaged/main/default/objects/Quote/fields/Ship_Customer_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>Ship_Customer_Address_Id__c</fullName>
    <label>Ship Customer Address Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>