unpackaged/main/default/objects/Quote/fields/Ship_to_email__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_email__c</fullName>
    <label>Ship to email</label>
    <type>Email</type>
</CustomField>