unpackaged/main/default/objects/Quote/fields/Ship_to_phone__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_phone__c</fullName>
    <label>Ship to phone</label>
    <type>Phone</type>
</CustomField>