unpackaged/main/default/objects/Quote/fields/Shipping_Contact__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account_Copy__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>