unpackaged/main/default/objects/Quote/fields/ShippingAdditionalStreet__c.field-meta.xml
<CustomField>
    <fullName>ShippingAdditionalStreet__c</fullName>
    <label>ShippingAdditionalStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>