unpackaged/main/default/objects/Quote/fields/ShipToName__c.field-meta.xml
<CustomField>
    <fullName>ShipToName__c</fullName>
    <formula>ShippingName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>