unpackaged/main/default/objects/Quote/fields/Supplier_Quote_File__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Quote_File__c</fullName>
    <description>The file(s) which was used to create the quote from opportunity. They can be multiple separated by a semicolon.</description>
    <label>Supplier Quote File</label>
    <type>TextArea</type>
</CustomField>