unpackaged/main/default/objects/Quote/fields/Supplier_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Quote_Number__c</fullName>
    <label>Supplier Quote Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>