unpackaged/main/default/objects/Quote/fields/Tax_Amount_GST__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_GST__c</fullName>
    <label>Tax Amount GST</label>
    <summarizedField>QuoteLineItem.Tax_Amount_GST__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>