unpackaged/main/default/objects/Quote/fields/Tax_Amount_HST__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_HST__c</fullName>
    <label>Tax Amount HST</label>
    <summarizedField>QuoteLineItem.Tax_Amount_HST__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>