unpackaged/main/default/objects/Quote/fields/Tax_Rate_GST__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate_GST__c</fullName>
    <label>Tax Rate GST</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>