unpackaged/main/default/objects/Quote/fields/Tax_Rate_PST__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate_PST__c</fullName>
    <label>Tax Rate PST</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>