unpackaged/main/default/objects/Quote/fields/varcpq_line_tax_rate__c.field-meta.xml
<CustomField>
    <fullName>varcpq_line_tax_rate__c</fullName>
    <description>Max line tax rate on Quote</description>
    <label>varcpq line tax rate</label>
    <summarizedField>QuoteLineItem.varcpq__Tax_Rate__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>