unpackaged/main/default/objects/Quote/validationRules/Contract_Account_must_equal_Opp_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Account_must_equal_Opp_Account</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Contract.AccountId )) &amp;&amp; (Contract.AccountId   &lt;&gt;   Opportunity.AccountId)</errorConditionFormula>
    <errorDisplayField>ContractId</errorDisplayField>
    <errorMessage>The contract selected isn&#39;t related to this customer</errorMessage>
</ValidationRule>