unpackaged/main/default/objects/Quote/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>varcpq__Total_Margin_percent__c</columns>
    <columns>QLI_from_different_country__c</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>CreatedBy</columns>
    <columns>Last_Modified_Date_Display__c</columns>
    <columns>Account_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Quotes</label>
</ListView>