unpackaged/main/default/objects/Quote/listViews/mine.listView-meta.xml
<ListView>
    <fullName>mine</fullName>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>QUOTE.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>Last_Modified_Date_Display__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Quotes</label>
</ListView>