unpackaged/main/default/objects/Quote/listViews/My_Teams_Quotes.listView-meta.xml
<ListView>
    <fullName>My_Teams_Quotes</fullName>
    <columns>Last_Modified_Date_Display__c</columns>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>QUOTE.NAME</field>
        <operation>notContain</operation>
        <value>VARCommerce Quote</value>
    </filters>
    <label>My Teams Quotes</label>
</ListView>