unpackaged/main/default/objects/Quote/listViews/Open_Quotes_25K_or_More.listView-meta.xml
<ListView>
    <fullName>Open_Quotes_25K_or_More</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>CreatedBy</columns>
    <columns>Last_Modified_Date_Display__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>GrandTotal</field>
        <operation>greaterOrEqual</operation>
        <value>USD 25000</value>
    </filters>
    <label>Open Quotes - $25K or More</label>
</ListView>