unpackaged/main/default/objects/Quote/listViews/Quote_View.listView-meta.xml
<ListView>
    <fullName>Quote_View</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ShipToName__c</columns>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>CreatedDateFormula__c</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>varcpq__Total_Margin_percent__c</columns>
    <columns>CreatedBy</columns>
    <columns>Account_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>Quote View</label>
</ListView>