unpackaged/main/default/objects/Quote/listViews/Quotes_Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Quotes_Pending_Approval</fullName>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>Account_Owner__c</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>CreatedBy</columns>
    <columns>Last_Modified_Date_Display__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>In Review</value>
    </filters>
    <label>Quotes - Pending Approval</label>
</ListView>